# mk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TUTORIAL.md  auditoria.mk  auto_night.mk  test_auto.mk
docs/: computer-use-skill.md  window-control.md
src/: clipboard.rs  doctor.rs  lib.rs  main.rs  mk-daemon-linux.rs  parser.rs  paste.rs  scheduler.rs
src/accessibility/: mod.rs
src/backend/: daemon.rs  mod.rs  wtype.rs
src/input/: daemon.rs  macos.rs  mod.rs  scaling.rs  windows.rs  xdotool.rs  ydotool.rs
src/output/: clipboard.rs  mod.rs  paste.rs
src/vision/: mod.rs
src/windows/: mod.rs
