[package]
name = "mk"
version = "0.4.0"
edition = "2024"
description = "CLI to automate keyboard input on Linux"

[[bin]]
name = "mk"
path = "src/main.rs"

[[bin]]
name = "mk-daemon"
path = "src/bin/mk-daemon.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
libc = "0.2"
chrono = "0.4"

